# JIMS-NoC

./: CMakeLists.txt  LICENSE  README.md  noc_simulation.vcd  simulation_logs.txt
src/: main.cpp
src/router/: arbiter.cpp  arbiter.h  core.cpp  core.h  crossbar.cpp  crossbar.h  fifo.h  flit.h  input_channel.cpp  input_channel.h  noc.cpp  noc.h  output_channel.cpp  output_channel.h  router.cpp  router.h  routing_unit.cpp  routing_unit.h  shared_buffer.h
